correct style on ie6,7

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body{
-    background: #f1f1f1;
+    padding: 2em 0;
+    background: #eee;
     font-size: 13px;
     line-height: 1.4;
     color: #222;
@@ -7,9 +8,10 @@ body{
 
 .container{
     width: 760px;
-    margin: 1em auto;
+    margin: 0 auto;
     background: #fff;
     padding-bottom: 1em;
+    box-shadow: 0 0 10px #ccc;
 }
 
 h1{
@@ -76,7 +78,8 @@ section{
 }
 
 #skills li{
-    margin-bottom: 1em;
+    margin-bottom: 0.75em;
+    zoom: 1;
 }
 
 #skills .name{
@@ -85,6 +88,8 @@ section{
     font-weight: bold;
     font-size: 12px;
     text-align: right;
+    clear: left;
+    display:block;
 }
 
 #skills .value{
